# relational-simulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml  cmake.yml
include/: entity.h  exception.h  log.h  point.h  relafwd.h  trait.h  utility.h  world.h
src/: CMakeLists.txt  entity.cpp  exception.cpp  log.cpp  main.cpp  trait.cpp  utility.cpp  world.cpp
src/core/: CMakeLists.txt  entity.cpp  entity.h  point.cpp  trait.cpp  trait.h  world.cpp  world.h
src/utility/: CMakeLists.txt  exception.h  utility.h
test/: CMakeLists.txt  entity_test.cpp  world_test.cpp
test/core/: entity_test.cpp  point_test.cpp  trait_test.cpp  world_test.cpp
vcpkg/: vcpkg.json  vcpkg.json.in
